--- a/rest_framework/templates/rest_framework/docs/sidebar.html
+++ b/rest_framework/templates/rest_framework/docs/sidebar.html
@@ -2,7 +2,33 @@
 <div id="sidebar-wrapper" class="sidebar-wrapper">
     <h3 class="sidebar-brand"><a href="#document-title">{{ document.title }}</a></h3>
 
+    <div class="language-switcher">
+        <div class="btn-group">
+          <button type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <span>shell</span> <span class="caret"></span>
+          </button>
+          <ul class="dropdown-menu language-control">
+            <li class="active"><a href="#" data-language="shell">shell</a></li>
+            <li><a href="#" data-language="javascript">javascript</a></li>
+            <li><a href="#" data-language="python">python</a></li>
+          </ul>
+        </div>
+    </div>
+
+   <!--  <ul class="nav navbar-nav navbar-right">
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span>shell</span> <b class="caret"></b></a>
+            <ul class="dropdown-menu language-control">
+                <li class="active"><a href="#" data-language="shell">shell</a></li>
+                <li><a href="#" data-language="javascript">javascript</a></li>
+                <li><a href="#" data-language="python">python</a></li>
+            </ul>
+        </li>
+    </ul> -->
+
+
     <ul class="nav nav-pills nav-stacked sidebar-nav">
+
         {% for section_key, section in document.data.items %}
         <li>
             <a href="#{{ section_key }}">{{ section_key }}</a>
