--- a/rest_framework/templates/rest_framework/docs/index.html
+++ b/rest_framework/templates/rest_framework/docs/index.html
@@ -15,7 +15,6 @@
         <style>{{ code_style }}</style>
         <style>
         .highlight {background-color: #f7f7f9}
-        .coredocs-link {border-top: 1px solid lightgrey; margin-top: 20px}
         .coredocs-section {border-top: 2px solid lightgrey; margin-top: 20px; padding-top: 20px}
         .checkbox label.control-label {font-weight: bold}
         @media (min-width: 768px) {
@@ -37,7 +36,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-lg-12">
-                            <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
+                            <a href="#menu-toggle" class="btn btn-default" id="menu-toggle"><i class="fa fa-bars"></i></a>
                             {% include "rest_framework/docs/document.html" %}
                         </div>
                     </div>
