--- a/rest_framework/templates/rest_framework/docs/sidebar.html
+++ b/rest_framework/templates/rest_framework/docs/sidebar.html
@@ -5,7 +5,7 @@
     <div class="language-switcher">
         <div class="btn-group">
           <button type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <span>shell</span> <span class="caret"></span>
+            <span>shell</span> &nbsp;&nbsp;<span class="caret"></span>
           </button>
           <ul class="dropdown-menu language-control">
             <li class="active"><a href="#" data-language="shell">shell</a></li>
@@ -25,7 +25,6 @@
             </ul>
         </li>
     </ul> -->
-
 
     <ul class="nav nav-pills nav-stacked sidebar-nav">
 
