--- a/rest_framework/templates/rest_framework/docs/sidebar.html
+++ b/rest_framework/templates/rest_framework/docs/sidebar.html
@@ -15,33 +15,18 @@
         </div>
     </div>
 
-   <!--  <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span>shell</span> <b class="caret"></b></a>
-            <ul class="dropdown-menu language-control">
-                <li class="active"><a href="#" data-language="shell">shell</a></li>
-                <li><a href="#" data-language="javascript">javascript</a></li>
-                <li><a href="#" data-language="python">python</a></li>
-            </ul>
-        </li>
-    </ul> -->
-
-    <ul class="nav nav-pills nav-stacked sidebar-nav">
-
+    <ul id="sidebar-nav" class="nav nav-pills nav-stacked sidebar-nav">
         {% for section_key, section in document.data.items %}
-        <li>
+        <li role="navigation">
             <a href="#{{ section_key }}">{{ section_key }}</a>
-
-            <!-- TOC -->
 
             <ul class="nav nav-pills nav-stacked">
             {% for link_key, link in section.links.items %}
-                <li><a href="#{{ section_key }}-{{ link_key }}">{{ link.title|default:link_key }}</a></li>
+                <li role="navigation"><a href="#{{ section_key }}-{{ link_key }}">{{ link.title|default:link_key }}</a></li>
             {% endfor %}
             </ul>
         </li>
         {% endfor %}
-
     </ul>
 </div>
 <!-- /#sidebar-wrapper -->
