--- a/rest_framework/templates/rest_framework/docs/index.html
+++ b/rest_framework/templates/rest_framework/docs/index.html
@@ -15,7 +15,6 @@
         <style>{{ code_style }}</style>
         <style>
         .highlight {background-color: #f7f7f9}
-        .coredocs-section {border-top: 2px solid lightgrey; margin-top: 20px; padding-top: 20px}
         .checkbox label.control-label {font-weight: bold}
         @media (min-width: 768px) {
             .navbar-nav.navbar-right:last-child {
@@ -28,6 +27,20 @@
 
     <body data-spy="scroll" data-target="#sidebar-nav" data-offset="50">
 
+        <nav class="navbar navbar-default navbar-fixed-top top-navbar">
+          <div class="container-fluid">
+            <div class="navbar-header">
+                <a href="#document-title" class="navbar-toggle collapsed" id="menu-toggle">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </a>
+              <a class="navbar-brand" href="#">{{ document.title }}</a>
+            </div>
+          </div>
+        </nav>
+
         <div id="wrapper">
             {% include "rest_framework/docs/sidebar.html" %}
 
@@ -36,7 +49,6 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-lg-12">
-                            <a href="#menu-toggle" class="btn btn-default" id="menu-toggle"><i class="fa fa-bars"></i></a>
                             {% include "rest_framework/docs/document.html" %}
                         </div>
                     </div>
@@ -85,10 +97,6 @@
                 var languageControls = $('.language-control li a')
                 languageControls.not('[data-language="' + language +'"]').parent().removeClass("active")
                 languageControls.filter('[data-language="' + language +'"]').parent().addClass("active")
-
-                console.log('-----');
-                console.log(button);
-                console.log('-----');
 
                 button.closest(".btn-group").find('.dropdown-toggle span').first().text(language)
 
