--- a/rest_framework/templates/rest_framework/docs/sidebar.html
+++ b/rest_framework/templates/rest_framework/docs/sidebar.html
@@ -1,30 +1,33 @@
-<!-- Sidebar -->
-<div id="sidebar-wrapper" class="sidebar-wrapper">
-    <div class="language-switcher">
-        <div class="btn-group">
-          <button type="button" class="btn btn-default btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <span>shell</span> &nbsp;&nbsp;<span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu language-control">
-            <li class="active"><a href="#" data-language="shell">shell</a></li>
-            <li><a href="#" data-language="javascript">javascript</a></li>
-            <li><a href="#" data-language="python">python</a></li>
-          </ul>
+<div class="sidebar">
+    <h3 class="brand">{{ document.title }}</h3>
+
+    <i class="fa fa-bars fa-2x toggle-btn" data-toggle="collapse" data-target="#menu-content"></i>
+    <div class="menu-list">
+        <ul id="menu-content" class="menu-content collapse out">
+            {% for section_key, section in document.data.items %}
+            <li data-toggle="collapse" data-target="#{{ section_key }}-{{ link_key }}" class="collapsed">
+                <a href="#{{ section_key }}"><i class="fa fa-dot-circle-o fa-lg"></i> {{ section_key }} <span class="arrow"></span></a>
+            </li>
+            <ul class="sub-menu collapse in" id="{{ section_key }}-{{ link_key }}">
+                {% for link_key, link in section.links.items %}
+                    <li><a href="#{{ section_key }}-{{ link_key }}">{{ link.title|default:link_key }}</a></li>
+                {% endfor %}
+            </ul>
+            {% endfor %}
+        </ul>
+
+        <div class="language-switcher">
+            <h6>Choose Language</h6>
+            <div class="btn-group">
+              <button type="button" class="btn btn-info btn-sm dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span>shell</span> &nbsp;&nbsp;<span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu language-control">
+                <li class="active"><a href="#" data-language="shell">shell</a></li>
+                <li><a href="#" data-language="javascript">javascript</a></li>
+                <li><a href="#" data-language="python">python</a></li>
+              </ul>
+            </div>
         </div>
     </div>
-
-    <ul id="sidebar-nav" class="nav nav-pills nav-stacked sidebar-nav">
-        {% for section_key, section in document.data.items %}
-        <li role="navigation">
-            <a href="#{{ section_key }}">{{ section_key }}</a>
-
-            <ul class="nav nav-pills nav-stacked">
-            {% for link_key, link in section.links.items %}
-                <li role="navigation"><a href="#{{ section_key }}-{{ link_key }}">{{ link.title|default:link_key }}</a></li>
-            {% endfor %}
-            </ul>
-        </li>
-        {% endfor %}
-    </ul>
 </div>
-<!-- /#sidebar-wrapper -->
