--- a/rest_framework/templates/rest_framework/docs/sidebar.html
+++ b/rest_framework/templates/rest_framework/docs/sidebar.html
@@ -5,10 +5,10 @@
     <div class="menu-list">
         <ul id="menu-content" class="menu-content collapse out">
             {% for section_key, section in document.data.items %}
-            <li data-toggle="collapse" data-target="#{{ section_key }}-{{ link_key }}" class="collapsed">
+            <li data-toggle="collapse" data-target="#{{ section_key }}-dropdown" class="collapsed">
                 <a href="#{{ section_key }}"><i class="fa fa-dot-circle-o fa-lg"></i> {{ section_key }} <span class="arrow"></span></a>
             </li>
-            <ul class="sub-menu collapse in" id="{{ section_key }}-{{ link_key }}">
+            <ul class="sub-menu collapse in" id="{{ section_key }}-dropdown">
                 {% for link_key, link in section.links.items %}
                     <li><a href="#{{ section_key }}-{{ link_key }}">{{ link.title|default:link_key }}</a></li>
                 {% endfor %}
